--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,70 @@
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    --grey: #F7F7F7;
+    --dark-grey: #e0e0e0;
+    --dark-red: #DB4C3F;
+}
+
+header {
+    background-color: var(--dark-red);
+    grid-column: 1 / 3;
+}
+
+.logo {
+    padding: 15px 25px;
+    
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 10px;
+}
+
+.container-grid {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+.grid-left {
+    background-color: var(--grey);
+    padding: 15px 25px;
+    height: 100vh;
+}
+
+.grid-right {
+    background-color: #fff;
+    padding: 15px 25px;
+    margin: 10px 50px;
+}
 
 
+svg {
+    width: 30px;
+}
+
+
+.add-task {
+    margin: 0 auto;
+}
+
+button {
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+
+
+    border: none;
+    background-color: var(--dark-grey);
+    border-radius: 7px;
+    color: var(--dark-red);
+}
+
+h2 {
+    margin-top: 35px;
+}
